# esp32_3c

./: CMakeLists.txt  README.md  gdbinit  partitions_example_with_ble.csv  sdkconfig  sdkconfig - 副本  sdkconfig.old
components/Radio/: CMakeLists.txt
components/Radio/boards/: board.c  rtc-board.c  rtc-board.h  stm32l1xx_hal_rtc.h  utilities.h
components/Radio/inc/: Commissioning.h  lora_app.h  radio.h  spi_driver.h
components/Radio/lorawan_wg/: lorawan_wg.c  lorawan_wg.h
components/Radio/mac/: LoRaMac.c  LoRaMac.h  LoRaMacCrypto.c  LoRaMacCrypto.h  LoRaMacMessageTypes.h  LoRaMacParser.c  LoRaMacSerializer.c  secure-element.h
components/Radio/soft-se/: aes.h  soft-se.c
components/Radio/src/: lora_app.c  lorawan.c  radio.c  spi_driver.c  (+2 more)
components/bluetooth/: CMakeLists.txt  bluetooth.c  bluetooth.h
components/http_mod/: CMakeLists.txt  http_mod.c  http_mod.h
components/i2c_sht20/: CMakeLists.txt  i2c_sht20.c  i2c_sht20.h
components/knob/: CMakeLists.txt  knob.c  knob.h  knob_task.c  knob_task.h
components/lcd_dev/: CMakeLists.txt  lcd_dev.c  lcd_dev.h  lcd_dev_tp.c
components/lvgl/: CMakeLists.txt  lv_conf.h  lvgl.h
components/lvgl/img/: test_img_1.c  test_img_2.c
components/lvgl/lvgl_driver/: lv_port_disp.c  lv_port_disp.h
components/lvgl/src/core/: lv_obj.c
components/mqtt_mod/: CMakeLists.txt  mqtt_mod.c  mqtt_mod.h
components/pca9535/: CMakeLists.txt  pca9535.c  pca9535.h
components/pcf8563/: CMakeLists.txt  pcf8563.c  pcf8563.h
components/wifi_mod/: CMakeLists.txt  wifi_mod.c  wifi_mod.h
main/: CMakeLists.txt  app_enter_main.c  app_main.c  hello_world_main.c  lvgl_demo_ui.bk  rgb_lcd_example_main.bk
(+2 files in other folders)
