idf_component_register(
            SRC_DIRS "src/core"
            SRC_DIRS "src/extra"
            SRC_DIRS "src/extra/layouts"
            SRC_DIRS "src/extra/layouts/flex"
            SRC_DIRS "src/extra/layouts/grid"
            SRC_DIRS "src/extra/themes"
            SRC_DIRS "src/extra/themes/basic"
            SRC_DIRS "src/extra/themes/default"
            SRC_DIRS "src/extra/themes/mono"
            SRC_DIRS "src/extra/widgets/animimg"
            SRC_DIRS "src/extra/widgets/calendar"
            SRC_DIRS "src/extra/widgets/chart"
            SRC_DIRS "src/extra/widgets/colorwheel"
            SRC_DIRS "src/extra/widgets/imgbtn"
            SRC_DIRS "src/extra/widgets/keyboard"
            SRC_DIRS "src/extra/widgets/led"
            SRC_DIRS "src/extra/widgets/list"
            SRC_DIRS "src/extra/widgets/meter"
            SRC_DIRS "src/extra/widgets/msgbox"
            SRC_DIRS "src/extra/widgets/span"
            SRC_DIRS "src/extra/widgets/spinbox"
            SRC_DIRS "src/extra/widgets/spinner"
            SRC_DIRS "src/extra/widgets/tabview"
            SRC_DIRS "src/extra/widgets/tileview"
            SRC_DIRS "src/extra/widgets/win"
            SRC_DIRS "src/draw" 
            SRC_DIRS "src/gpu"
            SRC_DIRS "src/font"
            SRC_DIRS "src/hal"
            SRC_DIRS "src/misc"
            SRC_DIRS "src/widgets"
            SRC_DIRS "lvgl_driver" 
            SRC_DIRS "img"                                
            INCLUDE_DIRS "./"
            PRIV_REQUIRES driver lcd_dev)
